--- a/ansible/init-openvpn/inventory.yml
+++ b/ansible/init-openvpn/inventory.yml
@@ -2,6 +2,6 @@
 worker_nodes:
   hosts:
     worker_node01:
-      ansible_user: <user>
-      ansible_password: <password>
-      ansible_host: 127.0.0.1
+      ansible_user: oleg
+      ansible_host: 192.168.1.136
+      ansible_private_key_file: ./.ssh-keys/id_rsa
