--- a/ansible/init-openvpn/playbook.yml
+++ b/ansible/init-openvpn/playbook.yml
@@ -6,7 +6,6 @@
   become_user: root
   tasks:
   - name: Update and upgrade apt packages
-    become: true
     apt:
       upgrade: yes
       update_cache: yes
@@ -17,4 +16,17 @@
       name: openvpn
       state: present
   
-  
+  - name: send vpn-client config
+    ansible.builtin.copy: 
+      src: ./.vpn-secrets/client.ovpn
+      dest: /etc/openvpn/client/client.conf
+      owner: root
+      group: root
+      mode: "0644"
+
+  - name: enable openvpn-client service
+    systemd:
+      daemon_reload: yes
+      name: openvpn-client@client
+      state: started
+      enabled: yes
